@@ -1,11 +1,18 @@
 import java.io.*;
+import java.math.BigInteger;
+import java.nio.file.Files;
+import java.security.MessageDigest;
+import java.util.Comparator;
 import java.util.List;
 
 public class FileBlockUtils {
 
     public static FileBlockAnswerMessage readFileBlock(String filePath, long offset, long length) {
+
         File file = new File(filePath);
-        int fileHash = filePath.hashCode();
+        System.out.println(file);
+
+        int fileHash = hashValue(file);
 
         if (offset < 0 || offset >= file.length()) {
             throw new IllegalArgumentException("Offset inválido");
@@ -31,13 +38,13 @@ public class FileBlockUtils {
         return new FileBlockAnswerMessage(fileHash, offset, length, data);
     }
 
-    public static void writeMessagesToFile(List<FileBlockAnswerMessage> messages, String outputPath) throws IOException {
+    public static void writeMessagesToFile(List<FileBlockAnswerMessage> messages, String outputPath) {
         if (messages == null || messages.isEmpty()) {
             throw new IllegalArgumentException("Lista de mensagens inválida.");
         }
 
-        messages.sort((m1, m2) -> Long.compare(m1.getOffset(), m2.getOffset()));
-        int fileHash = messages.get(0).getHash();
+        messages.sort(Comparator.comparingLong(FileBlockAnswerMessage::getOffset));
+        int fileHash = messages.getFirst().getHash();
         String fileName = "file_" + fileHash;
 
         File outputFile = new File(outputPath, fileName);
@@ -45,8 +52,24 @@ public class FileBlockUtils {
             for (FileBlockAnswerMessage message : messages) {
                 fos.write(message.getData());
             }
+        } catch (FileNotFoundException e) {
+            throw new RuntimeException(e);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
         System.out.println("Ficheiro escrito em: " + outputFile.getAbsolutePath());
+    }
+
+    public static int hashValue(File file) {
+        try {
+            MessageDigest md = MessageDigest.getInstance("SHA-256");
+            byte[] fileContent = Files.readAllBytes(file.toPath());
+            byte[] fileDigested = md.digest(fileContent);
+            return new BigInteger(1, fileDigested).intValue();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+
     }
 }
 
